--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ fastrand = "2.3.0"
 getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen = "0.2"
 macroquad = "0.4.1"
+instant = { version = "0.1", features = ["wasm-bindgen", "now"] }
 
 [workspace.dependencies.web-sys]
 version = "0.3"
