--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -12,6 +12,7 @@ wasm-bindgen.workspace = true
 regex.workspace = true
 fastrand.workspace = true
 getrandom.workspace = true
+instant.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1.0"
