--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -8,6 +8,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 shared = { path = "../shared" }
+compiler = { path = "../compiler" }
+vm = { path = "../vm" }
 wasm-bindgen.workspace = true
 regex.workspace = true
 fastrand.workspace = true
